squash! - discriminator openapi spec EVM gas tx config
